WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159194
[JSC] Fix build break since
r202502
https://bugs.webkit.org/show_bug.cgi?id=159194
Summary
[JSC] Fix build break since r202502
Joonghun Park
Reported
2016-06-27 23:09:53 PDT
Add missing ASSERT_NOT_REACHED(); to TypeMap::at().
Attachments
Patch
(1.25 KB, patch)
2016-06-27 23:27 PDT
,
Joonghun Park
no flags
Details
Formatted Diff
Diff
Patch
(1.60 KB, patch)
2016-06-28 00:30 PDT
,
Joonghun Park
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joonghun Park
Comment 1
2016-06-27 23:27:29 PDT
Created
attachment 282214
[details]
Patch
Alex Christensen
Comment 2
2016-06-27 23:48:35 PDT
Comment on
attachment 282214
[details]
Patch sure
Joonghun Park
Comment 3
2016-06-27 23:50:06 PDT
Comment on
attachment 282214
[details]
Patch Overall comments
WebKit Commit Bot
Comment 4
2016-06-28 00:10:20 PDT
Comment on
attachment 282214
[details]
Patch Clearing flags on attachment: 282214 Committed
r202553
: <
http://trac.webkit.org/changeset/202553
>
WebKit Commit Bot
Comment 5
2016-06-28 00:10:25 PDT
All reviewed patches have been landed. Closing bug.
Gyuyoung Kim
Comment 6
2016-06-28 00:26:02 PDT
hmm...this patch missed below compiler option. I already waited for passing ews in
bug 159193
:( #if COMPILER(GCC) && ASSERT_DISABLED #pragma GCC diagnostic push #pragma GCC diagnostic ignored "-Wreturn-type" #endif // COMPILER(GCC) && ASSERT_DISABLED
Joonghun Park
Comment 7
2016-06-28 00:30:46 PDT
Reopening to attach new patch.
Joonghun Park
Comment 8
2016-06-28 00:30:52 PDT
Created
attachment 282218
[details]
Patch
Joonghun Park
Comment 9
2016-06-28 00:34:25 PDT
(In reply to
comment #6
)
> hmm...this patch missed below compiler option. I already waited for passing > ews in
bug 159193
:( > > #if COMPILER(GCC) && ASSERT_DISABLED > #pragma GCC diagnostic push > #pragma GCC diagnostic ignored "-Wreturn-type" > #endif // COMPILER(GCC) && ASSERT_DISABLED
I see. Isn't it needed to add below also? #if COMPILER(GCC) && ASSERT_DISABLED #pragma GCC diagnostic pop #endif // COMPILER(GCC) && ASSERT_DISABLED
Gyuyoung Kim
Comment 10
2016-06-28 00:37:37 PDT
Comment on
attachment 282218
[details]
Patch r=me based on
Bug 159193
and
Bug 152887
.
Gyuyoung Kim
Comment 11
2016-06-28 00:38:19 PDT
***
Bug 159193
has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 12
2016-06-28 03:16:18 PDT
Comment on
attachment 282218
[details]
Patch Clearing flags on attachment: 282218 Committed
r202555
: <
http://trac.webkit.org/changeset/202555
>
WebKit Commit Bot
Comment 13
2016-06-28 03:16:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug