[JSC] Fix build break since r202502 https://bugs.webkit.org/show_bug.cgi?id=159194

Reviewed by Alex Christensen.

Fix about the error message below.
error: control reaches end of non-void function [-Werror=return-type]

* b3/B3TypeMap.h:
(JSC::B3::TypeMap::at): add missing ASSERT_NOT_REACHED().


Canonical link: https://commits.webkit.org/177300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202553 268f45cc-cd09-0410-ab3c-d52691b4dbfc